fixes footer riding up behind photos and patterns

--- a/app/assets/stylesheets/_posts_projects.scss
+++ b/app/assets/stylesheets/_posts_projects.scss
@@ -1,4 +1,5 @@
 #posts_wrapper {
+  min-height: 600px;
   padding: 3em 0;
   .card {
     width: 100%;
