--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@ $white: #ffffff;
 
 html, body {
   height: 100%;
+  margin: 0;
 }
 
 #holder {
@@ -25,6 +26,7 @@ body {
 }
 
 .wrapper {
+  min-height: 100%;
   position: relative;
   min-height: 100%;
   width: 90%;
@@ -32,6 +34,7 @@ body {
 }
 
 .skinny_wrapper {
+  min-height: 100%;
   width: 80%;
   max-width: 760px;
   margin: 0 auto;
@@ -158,38 +161,40 @@ hr {
   text-transform: uppercase;
 }
 
-#main_footer {
-  height: 40px;
-  width: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  padding: 2.5em 5%;
-  border-top: 1px solid $border;
-  background: #7b7d81;
-  .copyright {
-    float: left;
-    font-size: .9em;
-    margin: 0;
-  }
-  .tech {
-    z-index: -1;
-    text-align: center;
-    font-size: .9em;
-    margin: 0;
-    padding: 0;
-  }
-  nav {
-    float: right;
-    i {
-      color: $dark;
-      margin-left: 1em;
-      padding-top: .2em;
-      &:hover {
-        color: $highlight;
+#main_footer,
+  .push {
+    height: 40px;
+    width: 100%;
+    margin-top: -50px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 2.5em 5%;
+    border-top: 1px solid $border;
+    background: #7b7d81;
+    .copyright {
+      float: left;
+      font-size: .9em;
+      margin: 0;
+    }
+    .tech {
+      z-index: -1;
+      text-align: center;
+      font-size: .9em;
+      margin: 0;
+      padding: 0;
+    }
+    nav {
+      float: right;
+      i {
+        color: $dark;
+        margin-left: 1em;
+        padding-top: .2em;
+        &:hover {
+          color: $highlight;
+        }
       }
     }
-  }
 }
 
 input[type="text"], input[type="email"], input[type="password"], textarea {
@@ -238,6 +243,7 @@ input[type="submit"], .button {
 @import 'pygments';
 @import 'font-awesome';
 @import 'contacts';
+@import 'footer-distributed';
 @import 'lightbox';
 @import 'masonry/basic';
 @import 'masonry/centered';
